[package]
authors = ["Scott Bennett <scottbennett912@gmail.com>"]
edition = "2018"
name = "crystal"
version = "0.1.0"

[features]
crystal-opengl = [
  "gl",
  "image",
  "image/png",
]
crystal-webgl = [
  "wasm-bindgen",
  "js-sys",
  "web-sys",
  "web-sys/HtmlCanvasElement",
  "web-sys/HtmlImageElement",
  "web-sys/WebGl2RenderingContext",
  "web-sys/WebGlBuffer",
  "web-sys/WebGlProgram",
  "web-sys/WebGlShader",
  "web-sys/WebGlTexture",
  "web-sys/WebGlUniformLocation",
  "web-sys/WebGlVertexArrayObject",
]
default = []

[dependencies]
gl = {version = "0.14.0", optional = true}
image = {version = "0.23.8", optional = true}
js-sys = {version = "0.3.44", optional = true}
wasm-bindgen = {version = "0.2.67", optional = true}
web-sys = {version = "0.3.44", optional = true}
