[package]
authors = ["Scott Bennett <scottbennett912@gmail.com>"]
edition = "2018"
name = "crystal"
version = "0.1.0"

[features]
default = []

# backends
use-metal = ["cocoa", "foreign-types", "metal", "objc"]
use-opengl = ["gl"]
use-webgl = [
  "wasm-bindgen",
  "js-sys",
  "web-sys",
  "web-sys/HtmlCanvasElement",
  "web-sys/HtmlImageElement",
  "web-sys/WebGl2RenderingContext",
  "web-sys/WebGlBuffer",
  "web-sys/WebGlProgram",
  "web-sys/WebGlShader",
  "web-sys/WebGlTexture",
  "web-sys/WebGlUniformLocation",
  "web-sys/WebGlVertexArrayObject",
]

# optional window system hooks
use-winit = ["winit"]
use-sdl2 = ["sdl2", "raw-window-handle", "sdl2/raw-window-handle"]

[dependencies]
# shared
image = { version = "^0.23", features = ["png"] }

# metal backend
foreign-types = { version = "^0.3", optional = true }
cocoa = { version = "^0.23", optional = true }
objc = { version = "^0.2", optional = true }
metal = { version = "^0.20", optional = true }

# opengl backend
gl = { version = "^0.14", optional = true }

# webgl backend
js-sys = { version = "^0.3", optional = true }
wasm-bindgen = { version = "^0.2", optional = true }
web-sys = { version = "^0.3", optional = true }

# sdl2
raw-window-handle = { version = "^0.3", optional = true }
sdl2 = { version = "^0.34", optional = true }

# winit
winit = { version = "^0.22", optional = true }
